style: fix label alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -411,7 +411,6 @@ WRAPPERS
   font-weight: normal;
   font-size: 0.875rem;
   color: hsl(0, 0%, 10%);
-  padding: 0 0.5rem;
 }
 
 .editor-features .list-group-item {
